[gd_scene load_steps=4 format=3]

[ext_resource type="Theme" uid="uid://lun7iyf6nhym" path="res://data/themes/ui_theme.tres" id="1_2gjx6"]
[ext_resource type="Script" path="res://ui/singleplayer_menu/create_world_menu/create_world_menu.gd" id="1_6dtbx"]
[ext_resource type="Texture2D" uid="uid://dfyilufngsfrv" path="res://assets/textures/block/dirt.png" id="1_xxyva"]

[node name="CreateWorldMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2gjx6")
script = ExtResource("1_6dtbx")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xxyva")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 42.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "Create World"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 499.0
offset_top = 286.0
offset_right = -479.0
offset_bottom = -252.0
grow_horizontal = 2
grow_vertical = 2

[node name="WorldName" type="VBoxContainer" parent="VBoxContainer"]
offset_right = 1002.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/WorldName"]
offset_right = 1002.0
offset_bottom = 36.0
theme_type_variation = &"HeaderMedium"
text = "World Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/WorldName"]
offset_top = 40.0
offset_right = 1002.0
offset_bottom = 81.0
size_flags_vertical = 4
placeholder_text = "Type world name here..."

[node name="WorldSeed" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 121.0
offset_right = 1002.0
offset_bottom = 239.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/WorldSeed"]
offset_right = 1002.0
offset_bottom = 36.0
theme_type_variation = &"HeaderMedium"
text = "World Seed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/WorldSeed"]
offset_top = 40.0
offset_right = 1002.0
offset_bottom = 81.0
text = "123456"
placeholder_text = "Type world seed here..."

[node name="Generator" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 243.0
offset_right = 1002.0
offset_bottom = 360.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/Generator"]
offset_right = 1002.0
offset_bottom = 36.0
theme_type_variation = &"HeaderMedium"
text = "Generator"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GeneratorOptions" type="OptionButton" parent="VBoxContainer/Generator"]
offset_top = 40.0
offset_right = 1002.0
offset_bottom = 117.0
size_flags_vertical = 3

[node name="Gamemode" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 364.0
offset_right = 1002.0
offset_bottom = 482.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/Gamemode"]
offset_right = 1002.0
offset_bottom = 36.0
theme_type_variation = &"HeaderMedium"
text = "Gamemode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GamemodeOptions" type="OptionButton" parent="VBoxContainer/Gamemode"]
offset_top = 40.0
offset_right = 1002.0
offset_bottom = 118.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -522.0
offset_top = -102.0
offset_right = 522.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="CreateNewWorld" type="Button" parent="HBoxContainer"]
offset_right = 520.0
offset_bottom = 102.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Generate World"

[node name="Cancel" type="Button" parent="HBoxContainer"]
offset_left = 524.0
offset_right = 1044.0
offset_bottom = 102.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Cancel"
